--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,9 @@
+Package cleanup
 
-	reportworker
-		create temp file, upload it [tostring to json] to folder [path string] on ftp server
-		call flushdata
+person, newspaper, food
+	private attr -> protected where inheritance of these might be necessary
+	[person] type abstract method returns obj type [man, woman, girl, boy]
+
+person workers into person abstract methods
+
+create a data obj for newspaper data attr with abstract methods and 2 subclasses [one for list, one for hashmap]
