--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,20 @@
+Assign professions to people [cant be kids] [1 at 1 place at a time]
+	Police [arpox 10% of population]
+		catch criminals & kill them on a crime scene with x% (depends on the criminal's activities) chance
+	Ambulance [aprox 5% of population]
+		when someone is going to die, call the ambulance [if there is enough capacity], before dying, try to save them in 2 minutes with a 20% chance
+	Fire Fighter [aprox 10% of population]
+		during a disaster, fire fighters should save buildings [and people in it] with a 15% chance
+		in an apartment house, the chance of saving a flat gets lower with by every 3rd flat
+
+Create criminals who are killing people [cant be kids]
+	[aprox 8% of people]
+	killing someone every 5 min
+	fields:
+		killed list
+		chance of getting caught [increases by 5% with every crime] (no crime -> 0 chance of getting caught...)
+
+make global variables for timings
+
+
 cleanup
-test compatibility with eclipse
