--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,19 @@ New natural disasters [Automatic & Not killing directly, only affecting food fac
 		-50% vegetable generated in food factory
 	Infection [Starts automatically 4 days before the end of the month & last until the next month]
 		50% dairy and meat generated in food factory
+
+
+--------------------------------------------------------------------------------
+
+On day change ->
+	fetch last 3 day record highest
+		if over x then start drought
+check if its the first day of the month
+	if it is start monsoon
+
+check if its 4 days before the months end
+	if it is start infection
+
+
+automatic disasters 3rd wave
+	call the end of the given disaster
